--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.6"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "path": "^0.12.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
