--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "styled-components": "^6.0.6"
+    "styled-components": "^6.0.6",
+    "viem": "^1.5.3",
+    "wagmi": "^1.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
